welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if(m = n){
             ^