welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
	var m = a % 10;
	var n = b % 10;
	if(m = n){
		return true
	}else{
		return false
	}
}
